WIE links created.

--- a/pages/resources/women-in-engineering/index.html
+++ b/pages/resources/women-in-engineering/index.html
@@ -24,16 +24,16 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251128194255">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251128194255">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251128194255">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251203220942">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251203220942">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203220942">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251128194255" defer></script>
-<script src="/assets/js/loader.js?v=20251128194255" defer></script>
+<script src="/assets/js/quotes.js?v=20251203220942" defer></script>
+<script src="/assets/js/loader.js?v=20251203220942" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -47,18 +47,132 @@
 <header class="page-header">
   <div class="container flow">
     <h1>Women in Engineering</h1>
-    <p class="page-intro">Resources, reflections, and practical tools to support women navigating technical careers with grace and intent.</p>
+    <p class="page-intro">A curated, evolving space dedicated to supporting women—across engineering, architecture, research, and technology leadership. These resources reflect the L8 philosophy: clarity, courage, and the quiet power of intentional growth.</p>
   </div>
 </header>
 <!-- END: content/partials/page_header.html -->
  
       <!-- BEGIN: /content/resources-women-in-engineering.html -->
+
+        <!-- Topic navigation pills (anchor links only, no filtering) -->
         <section class="page-section">
-            <div class="container flow">
+            <div class="container">
+                <nav class="l8-section-pill-nav" aria-label="Women in Engineering topics">
+                    <div class="l8-pill-filter">
+                        <a href="#career-growth" class="l8-pill-filter__pill">Career Growth &amp; Leadership</a>
+                        <a href="#mentoring-allyship" class="l8-pill-filter__pill">Mentoring &amp; Allyship</a>
+                        <a href="#technical-communities" class="l8-pill-filter__pill">Technical Communities</a>
+                        <a href="#dei-belonging" class="l8-pill-filter__pill">DEI &amp; Belonging</a>
+                        <a href="#conferences-programs" class="l8-pill-filter__pill">Conferences &amp; Programs</a>
+                        <a href="#books-media" class="l8-pill-filter__pill">Books &amp; Media</a>
+                    </div>
+                </nav>
             </div>
         </section>
-<!-- BEGIN: /content/resources-women-in-engineering.html -->
-        
+
+        <!-- SECTION: Career Growth & Leadership -->
+        <section class="page-section" id="career-growth">
+            <div class="container flow">
+                <h2>Career Growth &amp; Leadership</h2>
+                <ul>
+                    <li><a href="https://leanin.org/" target="_blank">Lean In – Women, Work, and Leadership</a></li>
+                    <li><a href="https://www.witi.com/" target="_blank">WITI – Women in Technology International</a></li>
+                    <li><a href="https://www.aswe.org/" target="_blank">ASWE – Women Engineers Leadership Resources</a></li>
+                    <li><a href="https://www.mckinsey.com/featured-insights/mckinsey-on-books/women-in-the-workplace" target="_blank">McKinsey – Women in the Workplace Research</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- SECTION: Mentoring & Allyship -->
+        <section class="page-section" id="mentoring-allyship">
+            <div class="container flow">
+                <h2>Mentoring &amp; Allyship</h2>
+                <ul>
+                    <li><a href="https://www.ncwit.org/" target="_blank">NCWIT – National Center for Women &amp; IT</a></li>
+                    <li><a href="https://hbr.org/" target="_blank">Harvard Business Review – Mentoring &amp; Sponsorship Articles</a></li>
+                    <li><a href="https://www.cisco.com/c/en/us/about/inclusion-diversity.html" target="_blank">Cisco – Inclusion &amp; Collaboration Resources</a></li>
+                    <li><a href="https://www.mentoring.org/program-resources/" target="_blank">Mentoring.org – Effective Mentoring Guides</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- SECTION: Technical Communities -->
+        <section class="page-section" id="technical-communities">
+            <div class="container flow">
+                <h2>Technical Communities</h2>
+                <ul>
+                    <li><a href="https://ghc.anitab.org/" target="_blank">Grace Hopper Celebration</a></li>
+                    <li><a href="https://www.systers.org/" target="_blank">Systers – Technical Community for Women Technologists</a></li>
+                    <li><a href="https://womenwhocode.com/" target="_blank">Women Who Code</a></li>
+                    <li><a href="https://dev.to/t/womenintech" target="_blank">DEV – Women in Tech Stories &amp; Discussions</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- SECTION: DEI & Belonging -->
+        <section class="page-section" id="dei-belonging">
+            <div class="container flow">
+                <h2>Diversity, Equity &amp; Belonging</h2>
+                <ul>
+                    <li><a href="https://www.stemwomen.com/" target="_blank">STEM Women – Global Career &amp; DEI Programs</a></li>
+                    <li><a href="https://www.unwomen.org/" target="_blank">UN Women – Gender Equality Initiatives</a></li>
+                    <li><a href="https://www.aauw.org/resources/" target="_blank">AAUW – Research on Gender &amp; Workplace Policy</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- SECTION: Conferences & Programs -->
+        <section class="page-section" id="conferences-programs">
+            <div class="container flow">
+                <h2>Conferences &amp; Professional Programs</h2>
+                <ul>
+                    <li><a href="https://ghc.anitab.org/" target="_blank">Grace Hopper Celebration</a></li>
+                    <li><a href="https://witops.org/" target="_blank">Women in Tech Operations</a></li>
+                    <li><a href="https://www.societyofwomenengineers.org/" target="_blank">SWE Annual Conference</a></li>
+                    <li><a href="https://lesbianswhotech.org/pridesummit/" target="_blank">Lesbians Who Tech – Pride Summit</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- SECTION: Books & Media -->
+        <section class="page-section" id="books-media">
+            <div class="container flow">
+                <h2>Books &amp; Media</h2>
+                <ul>
+                    <li><strong>“Invisible Women: Data Bias in a World Designed for Men”</strong> – Caroline Criado Perez</li>
+                    <li><strong>“The Confidence Code”</strong> – Katty Kay &amp; Claire Shipman</li>
+                    <li><strong>“Designing Your Life”</strong> – Bill Burnett &amp; Dave Evans</li>
+                    <li><a href="https://www.npr.org/podcasts/510355/consider-this" target="_blank">Consider This – NPR</a> (supportive daily perspective)</li>
+                </ul>
+            </div>
+        </section>
+
+        <hr />
+
+        <!-- Personal block -->
+        <section class="page-section">
+            <div class="container flow">
+                <blockquote class="l8-pull-quote">
+                    <p>
+                        “Women have always engineered the world—quietly, boldly, gracefully.
+                        The Butterfly Layer simply gives that truth a place to land.”
+                    </p>
+                </blockquote>
+
+                <p>
+                    This page will continue to grow with new recommendations, personal essays,
+                    community spotlights, and guidance for early-career engineers, mid-career architects,
+                    and women stepping into senior leadership.
+                </p>
+
+                <p>
+                    💬 If there’s a resource you believe should be featured here, reach out anytime.
+                </p>
+            </div>
+        </section>
+
+<!-- END: /content/resources-women-in-engineering.html -->
+
     </main>
 
     <!-- Back to top / subtle footer helper -->
