Fixed mentoring header.

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -24,16 +24,16 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251203220942">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251203220942">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203220942">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251203221751">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251203221751">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203221751">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251203220942" defer></script>
-<script src="/assets/js/loader.js?v=20251203220942" defer></script>
+<script src="/assets/js/quotes.js?v=20251203221751" defer></script>
+<script src="/assets/js/loader.js?v=20251203221751" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -75,7 +75,7 @@
 
     <section class="page-section" aria-labelledby="mentoring">
       <div class="container flow">
-        <h2 id="mentoring">🤝 Mentoring</h2>
+        <h2 id="mentoring">🤝 Mentoring &amp; Leadership</h2>
         <p>
           Mentoring isn’t about having all the answers. It’s about sitting beside someone
           while they untangle their own complexity. My approach blends architecture thinking,
@@ -88,7 +88,7 @@
         </ul>
         <p>
           <a href="/pages/resources/mentoring/">
-            Learn more about Mentoring &rarr;
+            Learn more about Mentoring &amp; Leadership &rarr;
           </a>
         </p>
       </div>
