--- a/pages/resources/mentoring/index.html
+++ b/pages/resources/mentoring/index.html
@@ -6,34 +6,34 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Mentoring — Resources | L8: The Butterfly Layer</title>
+<title>Mentoring and Leadership — Resources | L8: The Butterfly Layer</title>
 <meta name="description" content="Mentoring philosophies, leadership practices, and frameworks for supporting others with clarity and care.">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="Mentoring — L8 Resources">
-<meta property="og:description" content="Mentoring resources from Jennifer Bowman and L8: The Butterfly Layer.">
+<meta property="og:title" content="Mentoring and Leadership — L8 Resources">
+<meta property="og:description" content="Mentoring and leadership resources from Jennifer Bowman and L8: The Butterfly Layer.">
 <meta property="og:image" content="/assets/img/social/og-default.png">
 <meta property="og:url" content="https://butterflylayer.com/resources/mentoring/">
 <meta property="og:site_name" content="L8: The Butterfly Layer">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Mentoring — L8 Resources">
-<meta name="twitter:description" content="Mentoring resources from Jennifer Bowman and L8: The Butterfly Layer.">
+<meta name="twitter:title" content="Mentoring and Leadership — L8 Resources">
+<meta name="twitter:description" content="Mentoring and leadership resources from Jennifer Bowman and L8: The Butterfly Layer.">
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251203220942">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251203220942">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203220942">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251203221751">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251203221751">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203221751">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251203220942" defer></script>
-<script src="/assets/js/loader.js?v=20251203220942" defer></script>
+<script src="/assets/js/quotes.js?v=20251203221751" defer></script>
+<script src="/assets/js/loader.js?v=20251203221751" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -46,7 +46,7 @@
       <!-- BEGIN: content/partials/page_header.html -->
 <header class="page-header">
   <div class="container flow">
-    <h1>Mentoring</h1>
+    <h1>Mentoring and Leadership</h1>
     <p class="page-intro">Thoughtful approaches to mentoring and leadership that honor both the architecture and the human in the loop.</p>
   </div>
 </header>
