Corrected WIE Links

--- a/pages/resources/women-in-engineering/index.html
+++ b/pages/resources/women-in-engineering/index.html
@@ -24,16 +24,16 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251203222324">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251203222324">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203222324">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251203223144">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251203223144">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251203223144">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251203222324" defer></script>
-<script src="/assets/js/loader.js?v=20251203222324" defer></script>
+<script src="/assets/js/quotes.js?v=20251203223144" defer></script>
+<script src="/assets/js/loader.js?v=20251203223144" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -116,7 +116,7 @@
                 <ul>
                     <li><a href="https://www.stemwomen.com/" target="_blank">STEM Women – Global Career &amp; DEI Programs</a></li>
                     <li><a href="https://www.unwomen.org/" target="_blank">UN Women – Gender Equality Initiatives</a></li>
-                    <li><a href="https://www.aauw.org/resources/" target="_blank">AAUW – Research on Gender &amp; Workplace Policy</a></li>
+                    <li><a href="https://www.aauw.org/research" target="_blank">AAUW – Research on Gender &amp; Workplace Policy</a></li>
                 </ul>
             </div>
         </section>
@@ -129,7 +129,7 @@
                     <li><a href="https://ghc.anitab.org/" target="_blank">Grace Hopper Celebration</a></li>
                     <li><a href="https://witops.org/" target="_blank">Women in Tech Operations</a></li>
                     <li><a href="https://www.societyofwomenengineers.org/" target="_blank">SWE Annual Conference</a></li>
-                    <li><a href="https://lesbianswhotech.org/pridesummit/" target="_blank">Lesbians Who Tech – Pride Summit</a></li>
+                    <li><a href="https://lwtsquad.com/lwtsquadsummit26/" target="_blank">Lesbians Who Tech – Pride Summit</a></li>
                 </ul>
             </div>
         </section>
