SEO fixes to posts

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 <meta property="og:url" content="https://butterflylayer.com/">
 <meta property="og:site_name" content="L8: The Butterfly Layer">
 
+<!-- Canonical -->
+<link rel="canonical" href="https://butterflylayer.com/">
+
+<!-- Extra per-page meta (e.g., article:published_time for blog posts) -->
+
+
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="L8: The Butterfly Layer">
@@ -24,17 +30,17 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205164826">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205172407">
 
 <!-- Page-specific scripts (optional) -->
-<script src="/assets/js/teasers.js?v=20251205164826" defer></script>
+<script src="/assets/js/teasers.js?v=20251205172407" defer></script>
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251205164826" defer></script>
-<script src="/assets/js/loader.js?v=20251205164826" defer></script>
+<script src="/assets/js/quotes.js?v=20251205172407" defer></script>
+<script src="/assets/js/loader.js?v=20251205172407" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -63,7 +69,7 @@
 
 <!--        <div class="hero-visual" aria-hidden="true">
           <img
-            src="/assets/img/ui/hero-butterfly-wow.svg?v=20251205164826"
+            src="/assets/img/ui/hero-butterfly-wow.svg?v=20251205172407"
             alt=""
             class="hero-butterfly"
           />
