--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -17,6 +17,12 @@
 <meta property="og:url" content="https://butterflylayer.com/about/">
 <meta property="og:site_name" content="L8: The Butterfly Layer">
 
+<!-- Canonical -->
+<link rel="canonical" href="https://butterflylayer.com/about/">
+
+<!-- Extra per-page meta (e.g., article:published_time for blog posts) -->
+
+
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="About Jennifer Bowman">
@@ -24,16 +30,16 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205164826">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205172407">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251205164826" defer></script>
-<script src="/assets/js/loader.js?v=20251205164826" defer></script>
+<script src="/assets/js/quotes.js?v=20251205172407" defer></script>
+<script src="/assets/js/loader.js?v=20251205172407" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -59,7 +65,7 @@
         <div class="bio-block">
           <figure class="profile-photo">
             <img
-              src="/assets/img/headshot-jennifer.jpg?v=20251205164826"
+              src="/assets/img/headshot-jennifer.jpg?v=20251205172407"
               alt="Jennifer Bowman, Principal Architect at Cisco CX"
             />
           </figure>
