--- a/pages/coco/index.html
+++ b/pages/coco/index.html
@@ -17,6 +17,12 @@
 <meta property="og:url" content="https://butterflylayer.com/coco/">
 <meta property="og:site_name" content="L8: The Butterfly Layer">
 
+<!-- Canonical -->
+<link rel="canonical" href="https://butterflylayer.com/coco/">
+
+<!-- Extra per-page meta (e.g., article:published_time for blog posts) -->
+
+
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="CoCo — The Heart of L8">
@@ -24,16 +30,16 @@
 <meta name="twitter:image" content="/assets/img/social/og-default.png">
 
 <!-- Primary styles -->
-<link rel="stylesheet" href="/assets/css/variables.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/main.css?v=20251205164826">
-<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205164826">
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251205172407">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251205172407">
 
 <!-- Page-specific scripts (optional) -->
 
 
 <!-- Shared scripts -->
-<script src="/assets/js/quotes.js?v=20251205164826" defer></script>
-<script src="/assets/js/loader.js?v=20251205164826" defer></script>
+<script src="/assets/js/quotes.js?v=20251205172407" defer></script>
+<script src="/assets/js/loader.js?v=20251205172407" defer></script>
 
 <!-- END: content/partials/head.html -->
 
@@ -58,7 +64,7 @@
       <div class="container bio-block">
         <figure class="profile-photo">
           <img
-            src="/assets/img/coco/coco-1.jpg?v=20251205164826"
+            src="/assets/img/coco/coco-1.jpg?v=20251205172407"
             alt="CoCo the chocolate lab sitting attentively during a video call."
           />
           <figcaption>On duty during client sessions.</figcaption>
@@ -73,7 +79,7 @@
 
           <figure>
             <img
-              src="/assets/img/coco/coco-2.jpg?v=20251205164826"
+              src="/assets/img/coco/coco-2.jpg?v=20251205172407"
               alt="CoCo relaxing between meetings."
             />
             <figcaption>Recovery between sprints.</figcaption>
