--- a/pages/p/ambient/presence.html
+++ b/pages/p/ambient/presence.html
@@ -16,7 +16,7 @@
   <title>L8 Presence</title>
 
   <!-- NOTE: no loader.js, no header/footer, no site chrome -->
-  <link rel="stylesheet" href="/assets/presence/presence.css?v=20251214041832" />
+  <link rel="stylesheet" href="/assets/presence/presence.css?v=20251214051218" />
 </head>
 
 <body>
@@ -31,19 +31,19 @@
 
     <!-- butterflies (small count = low CPU) -->
     <div class="butterflies" id="butterflies">
-      <span class="butterfly b1" aria-hidden="true"></span>
-      <span class="butterfly b2" aria-hidden="true"></span>
-      <span class="butterfly b3" aria-hidden="true"></span>
-      <span class="butterfly b4" aria-hidden="true"></span>
-      <span class="butterfly b5" aria-hidden="true"></span>
-      <span class="butterfly b6" aria-hidden="true"></span>
-      <span class="butterfly b7" aria-hidden="true"></span>
+    <span class="butterfly layer-1" data-layer="1"></span>
+    <span class="butterfly layer-2" data-layer="2"></span>
+    <span class="butterfly layer-3" data-layer="3"></span>
+    <span class="butterfly layer-4" data-layer="4"></span>
+    <span class="butterfly layer-5" data-layer="5"></span>
+    <span class="butterfly layer-6" data-layer="6"></span>
+    <span class="butterfly layer-7" data-layer="7"></span>
     </div>
 
     <!-- (Optional) ultra-subtle tagline -->
     <div class="tagline">Where intent takes flight.</div>
   </main>
 
-  <script src="/assets/presence/presence.js?v=20251214041832"></script>
+  <script src="/assets/presence/presence.js?v=20251214051218"></script>
 </body>
 </html>
